--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -2,15 +2,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="in.craigjmart.app.twitterclient.ComposeActivity">
+    tools:context=".ComposeActivity" >
 
-    <TextView
-        android:text="@string/hello_world"
+    <EditText
+        android:id="@+id/etTweet"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:paddingTop="30dp" />
+
+    <Button
+        android:id="@+id/btnCancel"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:onClick="onCancel"
+        android:text="@string/cancel"
+        android:textColor="#ffffff"
+        android:background="#ff9cbbe3"
+        android:minWidth="100dp"
+        android:layout_alignTop="@+id/btnTweet"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        style="?android:attr/borderlessButtonStyle"/>
+
+    <Button
+        android:id="@+id/btnTweet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onTweet"
+        android:text="@string/tweet"
+        android:textColor="#ffffff"
+        android:background="#6999fa"
+        android:minWidth="100dp"
+        android:layout_below="@+id/etTweet"
+        android:layout_alignRight="@+id/etTweet"
+        android:layout_alignEnd="@+id/etTweet"
+        android:layout_marginTop="50dp" />
 
 </RelativeLayout>
