fixed the broken Tweet post insert into timeline fragment

--- a/app/src/main/res/menu/timeline.xml
+++ b/app/src/main/res/menu/timeline.xml
@@ -16,6 +16,7 @@
         android:orderInCategory="10"
         android:icon="@drawable/ic_profile"
         android:showAsAction="ifRoom"
+        android:onClick="onProfileView"
         android:title="@string/profile">
     </item>
 </menu>
